--- a/src/cascadia/TerminalSettingsEditor/ColorSchemes.xaml
+++ b/src/cascadia/TerminalSettingsEditor/ColorSchemes.xaml
@@ -98,6 +98,10 @@
                     Margin="{StaticResource StandardIndentMargin}"
                     Spacing="24">
 
+            <TextBlock x:Uid="ColorSchemesDisclaimer"
+                       Margin="{StaticResource StandardIndentMargin}"
+                       Style="{StaticResource DisclaimerStyle}" />
+
             <!--  Select Color and Add New Button  -->
             <StackPanel Margin="0,5,0,0"
                         Orientation="Horizontal">
