--- a/src/cascadia/TerminalSettingsEditor/Profiles_Appearance.xaml
+++ b/src/cascadia/TerminalSettingsEditor/Profiles_Appearance.xaml
@@ -18,9 +18,9 @@
                 <ResourceDictionary Source="CommonResources.xaml" />
             </ResourceDictionary.MergedDictionaries>
 
-            <DataTemplate x:Key="EnumRadioButtonTemplate"
+            <DataTemplate x:Key="EnumComboBoxTemplate"
                           x:DataType="local:EnumEntry">
-                <RadioButton Content="{x:Bind EnumName, Mode=OneWay}" />
+                <TextBlock Text="{x:Bind EnumName, Mode=OneWay}" />
             </DataTemplate>
 
             <DataTemplate x:Key="FontFaceComboBoxItemTemplate"
@@ -127,12 +127,12 @@
                     <local:SettingContainer x:Uid="Profile_ScrollbarVisibility"
                                             ClearSettingValue="{x:Bind Profile.ClearScrollState}"
                                             HasSettingValue="{x:Bind Profile.HasScrollState, Mode=OneWay}"
-                                            SettingOverrideSource="{x:Bind Profile.ScrollStateOverrideSource, Mode=OneWay}"
-                                            Style="{StaticResource ExpanderSettingContainerStyle}">
-                        <muxc:RadioButtons AutomationProperties.AccessibilityView="Content"
-                                           ItemTemplate="{StaticResource EnumRadioButtonTemplate}"
-                                           ItemsSource="{x:Bind Profile.ScrollStateList, Mode=OneWay}"
-                                           SelectedItem="{x:Bind Profile.CurrentScrollState, Mode=TwoWay}" />
+                                            SettingOverrideSource="{x:Bind Profile.ScrollStateOverrideSource, Mode=OneWay}">
+                        <ComboBox AutomationProperties.AccessibilityView="Content"
+                                  ItemTemplate="{StaticResource EnumComboBoxTemplate}"
+                                  ItemsSource="{x:Bind Profile.ScrollStateList, Mode=OneWay}"
+                                  SelectedItem="{x:Bind Profile.CurrentScrollState, Mode=TwoWay}"
+                                  Style="{StaticResource ComboBoxSettingStyle}" />
                     </local:SettingContainer>
                 </StackPanel>
                 <StackPanel MaxWidth="{StaticResource StandardControlMaxWidth}">
