--- a/src/cascadia/TerminalApp/App.xaml
+++ b/src/cascadia/TerminalApp/App.xaml
@@ -48,8 +48,8 @@
                     <!--  Suppress top padding  -->
                     <Thickness x:Key="TabViewHeaderPadding">9,0,5,0</Thickness>
 
-                    <!--  Remove when implementing WinUI 2.6  -->
-                    <Thickness x:Key="FlyoutContentPadding">12</Thickness>
+                    <!--  Shadow that can be used by any control.  -->
+                    <ThemeShadow x:Name="SharedShadow" />
 
                     <ResourceDictionary.ThemeDictionaries>
                         <ResourceDictionary x:Key="Dark">
