--- a/src/cascadia/TerminalApp/ColorPickupFlyout.xaml
+++ b/src/cascadia/TerminalApp/ColorPickupFlyout.xaml
@@ -25,83 +25,12 @@
                                        MaximumRowsOrColumns="4"
                                        Orientation="Horizontal">
                     <VariableSizedWrapGrid.Resources>
-                        <Style x:Key="ColorButtonStyle"
+                        <Style x:Name="ColorPickerColorButtonStyle"
+                               BasedOn="{StaticResource ColorButtonStyle}"
                                TargetType="Button">
-                            <Setter Property="BackgroundSizing" Value="OuterBorderEdge" />
-                            <Setter Property="BorderBrush" Value="{ThemeResource ButtonBorderBrush}" />
-                            <Setter Property="BorderThickness" Value="{ThemeResource ButtonBorderThemeThickness}" />
                             <Setter Property="Margin" Value="2" />
-                            <Setter Property="CornerRadius" Value="{ThemeResource ControlCornerRadius}" />
-                            <Setter Property="UseSystemFocusVisuals" Value="{StaticResource UseSystemFocusVisuals}" />
-                            <Setter Property="FocusVisualMargin" Value="-3" />
-                            <Setter Property="Width" Value="32" />
-                            <Setter Property="Height" Value="32" />
-                            <Setter Property="Template">
-                                <Setter.Value>
-                                    <ControlTemplate TargetType="Button">
-                                        <Grid>
-                                            <Border x:Name="ColorButtonBackground"
-                                                    Background="{TemplateBinding Background}"
-                                                    BackgroundSizing="{TemplateBinding BackgroundSizing}"
-                                                    BorderBrush="{TemplateBinding BorderBrush}"
-                                                    BorderThickness="{TemplateBinding BorderThickness}"
-                                                    CornerRadius="{TemplateBinding CornerRadius}" />
-                                            <VisualStateManager.VisualStateGroups>
-                                                <VisualStateGroup x:Name="CommonStates">
-                                                    <VisualState x:Name="Normal" />
-
-                                                    <VisualState x:Name="PointerOver">
-                                                        <Storyboard>
-                                                            <ObjectAnimationUsingKeyFrames Storyboard.TargetName="ColorButtonBackground"
-                                                                                           Storyboard.TargetProperty="Opacity">
-                                                                <DiscreteObjectKeyFrame KeyTime="0"
-                                                                                        Value="0.9" />
-                                                            </ObjectAnimationUsingKeyFrames>
-                                                            <ObjectAnimationUsingKeyFrames Storyboard.TargetName="ColorButtonBackground"
-                                                                                           Storyboard.TargetProperty="BorderBrush">
-                                                                <DiscreteObjectKeyFrame KeyTime="0"
-                                                                                        Value="{ThemeResource ButtonBorderBrushPointerOver}" />
-                                                            </ObjectAnimationUsingKeyFrames>
-                                                        </Storyboard>
-                                                    </VisualState>
-
-                                                    <VisualState x:Name="Pressed">
-                                                        <Storyboard>
-                                                            <ObjectAnimationUsingKeyFrames Storyboard.TargetName="ColorButtonBackground"
-                                                                                           Storyboard.TargetProperty="Opacity">
-                                                                <DiscreteObjectKeyFrame KeyTime="0"
-                                                                                        Value="0.8" />
-                                                            </ObjectAnimationUsingKeyFrames>
-                                                            <ObjectAnimationUsingKeyFrames Storyboard.TargetName="ColorButtonBackground"
-                                                                                           Storyboard.TargetProperty="BorderBrush">
-                                                                <DiscreteObjectKeyFrame KeyTime="0"
-                                                                                        Value="{ThemeResource ButtonBorderBrushPressed}" />
-                                                            </ObjectAnimationUsingKeyFrames>
-                                                        </Storyboard>
-                                                    </VisualState>
-
-                                                    <VisualState x:Name="Disabled">
-                                                        <Storyboard>
-                                                            <ObjectAnimationUsingKeyFrames Storyboard.TargetName="ColorButtonBackground"
-                                                                                           Storyboard.TargetProperty="Background">
-                                                                <DiscreteObjectKeyFrame KeyTime="0"
-                                                                                        Value="{ThemeResource ButtonBackgroundDisabled}" />
-                                                            </ObjectAnimationUsingKeyFrames>
-                                                            <ObjectAnimationUsingKeyFrames Storyboard.TargetName="ColorButtonBackground"
-                                                                                           Storyboard.TargetProperty="BorderBrush">
-                                                                <DiscreteObjectKeyFrame KeyTime="0"
-                                                                                        Value="{ThemeResource ButtonBorderBrushDisabled}" />
-                                                            </ObjectAnimationUsingKeyFrames>
-                                                        </Storyboard>
-                                                    </VisualState>
-                                                </VisualStateGroup>
-                                            </VisualStateManager.VisualStateGroups>
-                                        </Grid>
-                                    </ControlTemplate>
-                                </Setter.Value>
-                            </Setter>
                         </Style>
-                        <Style BasedOn="{StaticResource ColorButtonStyle}"
+                        <Style BasedOn="{StaticResource ColorPickerColorButtonStyle}"
                                TargetType="Button" />
                     </VariableSizedWrapGrid.Resources>
 
