--- a/src/cascadia/TerminalApp/TabRowControl.xaml
+++ b/src/cascadia/TerminalApp/TabRowControl.xaml
@@ -60,7 +60,8 @@
                                  FontSize="12">
                     <ToolTipService.ToolTip>
                         <ToolTip Placement="Mouse">
-                            <TextBlock IsTextSelectionEnabled="False">
+                            <TextBlock IsTextSelectionEnabled="False"
+                                       TextWrapping="Wrap">
                                 <Run x:Uid="NewTabRun" /> <LineBreak />
                                 <Run x:Uid="NewPaneRun"
                                      FontStyle="Italic" /> <LineBreak />
